@@ -142,7 +142,7 @@ REFIT_CONFIG GlobalConfig = {
     /* DisableCompatCheck = */ FALSE,
     /* DisableAMFI = */ FALSE,
     /* SupplyAPFS = */ FALSE,
-    /* SuppressVerboseAPFS = */ FALSE,
+    /* SilenceAPFS = */ FALSE,
     /* SyncAPFS = */ FALSE,
     /* ProtectNVRAM = */ FALSE,
     /* ScanOtherESP = */ FALSE,
