@@ -14,6 +14,9 @@
   * Now updated to be run from any directory
 - Aligns Driver and Tools Folders with Upstream
   * Drops '{ARCH}_drivers' and '{ARCH}_tools' Folders for upstream consistency
+- Changes Token Name for Internal Consistency
+  * 'suppress_verbose_apfs' to 'silence_apfs'
+
 
 
 0.13.2.AD (04 May 2021):
